--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':cobalt')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':cobalt')
 }
